# phylogenie

./: .gitignore  README.md  pyproject.toml
.mypy_stubs/Bio/: SeqRecord.pyi
.mypy_stubs/treesimulator/: __init__.pyi  generator.pyi  mtbd_models.pyi
examples/: 1-TreeSimulatorBD.yaml  1.BD-Trees.yaml  2-TreeSimulatorBDEI.yaml  2.BDEI-Trees.yaml  3-TreeSimulatorBDSS.yaml  3-TreeSimulatorMTBD.yaml  3.BDSS-Trees.yaml  4-AliSimBD.yaml  4-TreeSimulatorMTBD.yaml  4.Canonical-Trees.yaml  5-AliSimBD.yaml  5.BD-CT-Trees.yaml  5.Epidemiological-Trees.yaml  6.BD-MSAs.yaml  6.FBD-Trees.yaml  7.BD-CT-Trees.yaml  8.BD-MSAs.yaml  8.BD-Mutations-Trees.yaml  9.BD-MSAs.yaml  BD.yaml  BDEI.yaml  Canonical-Simple-Trees-Skyline.yaml  Canonical-Simple-Trees.yaml  README.md  alisim-BD.yaml  alisim-BDEI.yaml  treesimulator-BD-skyline.yaml  treesimulator-BD.yaml  treesimulator-BDEI-skyline.yaml  treesimulator-BDEI.yaml  treesimulator-canonical-skyline.yaml  treesimulator-canonical.yaml
phylogenie/: __init__.py  alphabets.py  draw.py  main.py  msa.py  rand.py  tree.py  utils.py
phylogenie/core/: factories.py
phylogenie/generators/: __init__.py  base.py  configs.py  dataset.py  factories.py  msas.py  trees.py  typeguards.py
phylogenie/helpers/: remaster.py  treesimulator.py
phylogenie/parameterizations/: __init__.py  core.py  rand.py
phylogenie/skyline/: __init__.py
phylogenie/treesimulator/: __init__.py  features.py  gillespie.py  model.py  mutations.py
phylogenie/utils/: __init__.py  mixins.py  validators.py
src/phylogenie/: __init__.py  _mixins.py  (+9 more)
tutorials/: 1.BD-Trees.yaml  2.BDEI-Trees.yaml  3.BDSS-Trees.yaml  4.Canonical-Trees.yaml  5.Epidemiological-Trees.yaml  6.FBD-Trees.yaml  7.BD-MSAs.yaml  7.SIR-Trees.yaml  8.BD-MSAs.yaml  9.BD-MSAs.yaml  README.md
(+113 files in other folders)
