[project]
name = "phylogenie"
version = "3.8.0"
description = "Generate phylogenetic datasets with minimal setup effort"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "joblib-stubs>=1.5.2.0.20250831",
    "pandas-stubs>=2.3.2.250926",
    "pylint>=4.0.5",
    "pyright>=1.1.408",
    "pytest>=8.4.2",
]

[tool.pyright]
typeCheckingMode = "strict"

[project.scripts]
phylogenie = "phylogenie.main:main"

[project.entry-points."phylogenie.plugins"]
native_open_population = "phylogenie.plugins.native.open_population"
native_sir = "phylogenie.plugins.native.sir"
alisim = "phylogenie.plugins.alisim"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
